ScrollViewer fixed; Zoom buttons

--- a/Pixed/Controls/MainWindowSections/ProjectsSection.axaml
+++ b/Pixed/Controls/MainWindowSections/ProjectsSection.axaml
@@ -29,6 +29,9 @@
           </Grid>
         </DataTemplate>
       </TabControl.ItemTemplate>
+		<TabControl.ContentTemplate>
+			<DataTemplate></DataTemplate>
+		</TabControl.ContentTemplate>
     </TabControl>
   </ScrollViewer>
 </UserControl>
