--- a/Pixed/ControlThemes.axaml
+++ b/Pixed/ControlThemes.axaml
@@ -194,7 +194,7 @@
       </Style>
     </Style>
   </ControlTheme>
-	<ControlTheme x:Key="{x:Type controls:NoGesturesScrollViewer}" TargetType="{x:Type controls:NoGesturesScrollViewer}">
+	<ControlTheme x:Key="NoGesturesScrollViewer" TargetType="ScrollViewer">
 		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="Template">
 			<ControlTemplate>
