--- a/Pixed/Controls/PaintCanvas.axaml
+++ b/Pixed/Controls/PaintCanvas.axaml
@@ -11,25 +11,44 @@
     <UserControl.DataContext>
         <viewmodels:PaintCanvasViewModel/>
     </UserControl.DataContext>
-    <ScrollViewer
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="32"/>
+		</Grid.RowDefinitions>
+		<ScrollViewer
     x:Name="scrollView"
     VerticalScrollBarVisibility="Visible"
 	HorizontalScrollBarVisibility="Visible"
 	AllowAutoHide="False"
 	Theme="{StaticResource NoGesturesScrollViewer}">
-        <Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
-            <Grid.Background>
-				<ImageBrush Source="avares://Pixed/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
-            </Grid.Background>
-            <Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
-            <Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
-			<Canvas Background="{Binding GridBrush}"/>
-			<Border Name="interactionBorder" Background="Transparent"
-					PointerExited="Border_PointerExited"
-					PointerMoved="Border_PointerMoved"
-					PointerPressed="Border_PointerPressed"
-					PointerReleased="Border_PointerReleased"
-					PointerWheelChanged="Border_PointerWheelChanged"/>
-        </Grid>
-    </ScrollViewer>
+			<Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
+				<Grid.Background>
+					<ImageBrush Source="avares://Pixed/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
+				</Grid.Background>
+				<Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
+				<Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
+				<Canvas Background="{Binding GridBrush}"/>
+				<Border Name="interactionBorder" Background="Transparent"
+						PointerExited="Border_PointerExited"
+						PointerMoved="Border_PointerMoved"
+						PointerPressed="Border_PointerPressed"
+						PointerReleased="Border_PointerReleased"
+						PointerWheelChanged="Border_PointerWheelChanged"
+						KeyUp="Border_KeyProcess"
+						KeyDown="Border_KeyProcess"/>
+			</Grid>
+		</ScrollViewer>
+		<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5">
+			<Button Width="32" Height="32" Command="{Binding ZoomOutCommand}">
+				<Image Source="/Resources/Icons/zoom-out.png"/>
+			</Button>
+			<Button Width="32" Height="32" Command="{Binding ZoomInCommand}">
+				<Image Source="/Resources/Icons/zoom-in.png"/>
+			</Button>
+			<CheckBox Content="Shift" IsChecked="{Binding ShiftChecked, Mode=TwoWay}" IsEnabled="{Binding ShiftEnabled}"/>
+			<CheckBox Content="Control" IsChecked="{Binding ControlChecked, Mode=TwoWay}" IsEnabled="{Binding ControlEnabled}"/>
+			<CheckBox Content="Alt" IsChecked="{Binding AltChecked, Mode=TwoWay}" IsEnabled="{Binding AltEnabled}"/>
+		</StackPanel>
+	</Grid>
 </UserControl>
