--- a/Pixed/Controls/MainWindowSections/FramesSection.axaml
+++ b/Pixed/Controls/MainWindowSections/FramesSection.axaml
@@ -28,24 +28,24 @@
       <Grid.RowDefinitions>
         <RowDefinition Height="32"/>
       </Grid.RowDefinitions>
-      <Button Command="{Binding NewFrameCommand}" Theme="{StaticResource BaseButton}">
+      <controls:TouchButton Command="{Binding NewFrameCommand}" Theme="{StaticResource BaseButton}">
         <Image Source="avares://Pixed/Resources/Icons/plus.png" Width="16" Height="16"/>
         <ToolTip.Tip>
           <controls:SimpleTooltip Title="New frame"/>
         </ToolTip.Tip>
-      </Button>
-      <Button Grid.Column="1" Command="{Binding DuplicateFrameCommand}" Theme="{StaticResource BaseButton}">
+      </controls:TouchButton>
+		<controls:TouchButton Grid.Column="1" Command="{Binding DuplicateFrameCommand}" Theme="{StaticResource BaseButton}">
         <Image Source="avares://Pixed/Resources/Icons/files-empty.png" Width="16" Height="16"/>
         <ToolTip.Tip>
           <controls:SimpleTooltip Title="Duplicate frame"/>
         </ToolTip.Tip>
-      </Button>
-      <Button Grid.Column="2" Command="{Binding RemoveFrameCommand}" IsEnabled="{Binding RemoveFrameEnabled}" Theme="{StaticResource BaseButton}">
-        <Image Source="avares://Pixed/Resources/Icons/bin.png" Width="16" Height="16"/>
-        <ToolTip.Tip>
-          <controls:SimpleTooltip Title="Remove frame"/>
-        </ToolTip.Tip>
-      </Button>
+      </controls:TouchButton>
+		<controls:TouchButton Grid.Column="2" Command="{Binding RemoveFrameCommand}" IsEnabled="{Binding RemoveFrameEnabled}" Theme="{StaticResource BaseButton}">
+			<Image Source="avares://Pixed/Resources/Icons/bin.png" Width="16" Height="16"/>
+			<ToolTip.Tip>
+				<controls:SimpleTooltip Title="Remove frame"/>
+			</ToolTip.Tip>
+		</controls:TouchButton>
     </Grid>
     <ScrollViewer Grid.Row="1" Width="110" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
       <ListBox Classes="FramesDragAndDrop" ItemsSource="{Binding Frames}" SelectedIndex="{Binding SelectedFrame, Mode=TwoWay}" Width="102"
