--- a/Pixed/Controls/MainWindowSections/PaletteSection.axaml
+++ b/Pixed/Controls/MainWindowSections/PaletteSection.axaml
@@ -32,42 +32,42 @@
 							<Grid.RowDefinitions>
 								<RowDefinition Height="32"/>
 							</Grid.RowDefinitions>
-							<Button Theme="{StaticResource BaseButton}" Command="{Binding PaletteAddPrimaryCommand}">
+							<controls:TouchButton Theme="{StaticResource BaseButton}" Command="{Binding PaletteAddPrimaryCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/plus.png" Width="16" Height="16"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Add Primary color to palette"/>
 								</ToolTip.Tip>
-							</Button>
-							<Button Theme="{StaticResource BaseButton}" Grid.Column="1" Command="{Binding PaletteAddCurrentCommand}">
+							</controls:TouchButton>
+							<controls:TouchButton Theme="{StaticResource BaseButton}" Grid.Column="1" Command="{Binding PaletteAddCurrentCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/merge_palettes.png" Width="16" Height="16"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Merge palette with current colors"/>
 								</ToolTip.Tip>
-							</Button>
-							<Button Theme="{StaticResource BaseButton}" Grid.Column="2" Command="{Binding PaletteListCommand}">
+							</controls:TouchButton>
+							<controls:TouchButton Theme="{StaticResource BaseButton}" Grid.Column="2" Command="{Binding PaletteListCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/database.png" Width="16" Height="16"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Palettes list"/>
 								</ToolTip.Tip>
-							</Button>
-							<Button Theme="{StaticResource BaseButton}" Grid.Column="3" Command="{Binding PaletteOpenCommand}">
+							</controls:TouchButton>
+							<controls:TouchButton Theme="{StaticResource BaseButton}" Grid.Column="3" Command="{Binding PaletteOpenCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/folder-open.png" Width="16" Height="16"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Open palette from file"/>
 								</ToolTip.Tip>
-							</Button>
-							<Button Theme="{StaticResource BaseButton}" Grid.Column="4" Command="{Binding PaletteSaveCommand}">
+							</controls:TouchButton>
+							<controls:TouchButton Theme="{StaticResource BaseButton}" Grid.Column="4" Command="{Binding PaletteSaveCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/floppy-disk.png" Width="16" Height="16"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Save palette to file"/>
 								</ToolTip.Tip>
-							</Button>
-							<Button Theme="{StaticResource BaseButton}" Grid.Column="5" Command="{Binding PaletteClearCommand}">
+							</controls:TouchButton>
+							<controls:TouchButton Theme="{StaticResource BaseButton}" Grid.Column="5" Command="{Binding PaletteClearCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/cross.png" Width="16" Height="16"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Clear palette"/>
 								</ToolTip.Tip>
-							</Button>
+							</controls:TouchButton>
 						</Grid>
 						<controls:ColorGrid Columns="5" Colors="{Binding SelectedPaletteColors}"/>
 					</StackPanel>
