--- a/Pixed/Controls/PaintCanvas.axaml
+++ b/Pixed/Controls/PaintCanvas.axaml
@@ -49,6 +49,8 @@
 			<CheckBox Content="Shift" IsChecked="{Binding ShiftChecked, Mode=TwoWay}" IsEnabled="{Binding ShiftEnabled}"/>
 			<CheckBox Content="Control" IsChecked="{Binding ControlChecked, Mode=TwoWay}" IsEnabled="{Binding ControlEnabled}"/>
 			<CheckBox Content="Alt" IsChecked="{Binding AltChecked, Mode=TwoWay}" IsEnabled="{Binding AltEnabled}"/>
+      <TextBlock Text="{Binding ProjectSizeText}" VerticalAlignment="Center" Margin="10,0,0,0"/>
+      <TextBlock Text="{Binding MouseCoordinatesText}" VerticalAlignment="Center"/>
 		</StackPanel>
 	</Grid>
 </UserControl>
