--- a/Pixed/ControlThemes.axaml
+++ b/Pixed/ControlThemes.axaml
@@ -5,7 +5,7 @@
     <Border Padding="20">
       <StackPanel Spacing="10">
         <RadioButton>
-          <Image Source="avares://Pixed/Resources/Icons/arrow-left.png" Width="40" Height="40"/>
+          <Image Source="avares://Pixed.Core/Resources/Icons/arrow-left.png" Width="40" Height="40"/>
         </RadioButton>
       </StackPanel>
     </Border>
