--- a/Pixed/Controls/FixedPortableColorPicker.axaml
+++ b/Pixed/Controls/FixedPortableColorPicker.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 			 xmlns:colorPicker="clr-namespace:ColorPicker;assembly=ColorPicker.AvaloniaUI"
-			 xmlns:local="clr-namespace:Pixed.Controls;assembly=Pixed"
+			 xmlns:local="clr-namespace:Pixed.Controls;assembly=Pixed.Core"
              x:Class="Pixed.Controls.FixedPortableColorPicker">
 	<Grid>
 		<Border BorderThickness="1" BorderBrush="Black" ZIndex="0"
@@ -13,7 +13,7 @@
 			<Grid>				
 				<Border CornerRadius="5" Margin="1">
 					<Border.Background>
-						<ImageBrush Source="avares://Pixed/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
+						<ImageBrush Source="avares://Pixed.Core/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
 					</Border.Background>
 				</Border>
 				<Border BorderThickness="1" BorderBrush="{StaticResource ButtonBorder}" CornerRadius="5" Background="Transparent" Margin="1" x:Name="toggleBorder" PointerPressed="Border_PointerPressed" Width="{Binding Width, RelativeSource={RelativeSource FindAncestor, AncestorType=local:FixedPortableColorPicker}}" Height="{Binding Height, RelativeSource={RelativeSource FindAncestor, AncestorType=local:FixedPortableColorPicker}}"/>
