--- a/Pixed/Controls/FrameListControl.axaml
+++ b/Pixed/Controls/FrameListControl.axaml
@@ -8,7 +8,7 @@
              Width="100" Height="102">
   <Grid Width="96" Height="96">
     <Grid.Background>
-      <ImageBrush Source="avares://Pixed/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
+      <ImageBrush Source="avares://Pixed.Core/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
     </Grid.Background>
     <Image Width="96" Height="96" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
   </Grid>
