--- a/Pixed/Windows/NewProjectWindow.axaml
+++ b/Pixed/Windows/NewProjectWindow.axaml
@@ -9,7 +9,7 @@
         MinHeight="230"
         ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
-        Icon="avares://Pixed/Resources/icon.ico">
+        Icon="avares://Pixed.Core/Resources/icon.ico">
   <StackPanel>
     <TextBlock Text="Width:" Margin="10"/>
     <NumericUpDown Margin="10" Value="{Binding WidthValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:NewProjectWindow}, Mode=TwoWay}" Minimum="1"/>
