--- a/Pixed/Windows/ResizeProjectWindow.axaml
+++ b/Pixed/Windows/ResizeProjectWindow.axaml
@@ -8,7 +8,7 @@
         xmlns:vm="clr-namespace:Pixed.ViewModels"
         MinHeight="230" ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
-        Icon="avares://Pixed/Resources/icon.ico">
+        Icon="avares://Pixed.Core/Resources/icon.ico">
   <Window.DataContext>
     <vm:ResizeProjectWindowViewModel/>
   </Window.DataContext>
