--- a/Pixed/Windows/TransformFlipWindow.axaml
+++ b/Pixed/Windows/TransformFlipWindow.axaml
@@ -10,7 +10,7 @@
 		ShowInTaskbar="False" 
 		SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
-        Icon="avares://Pixed/Resources/icon.ico">
+        Icon="avares://Pixed.Core/Resources/icon.ico">
 	<StackPanel>
 		<CheckBox Content="Flip vertically" Name="flipVertically" Margin="10"/>
 		<CheckBox Content="Apply to all frames" Name="applyToAllFrames" Margin="10"/>
