--- a/Pixed/Windows/TransformRotateWindow.axaml
+++ b/Pixed/Windows/TransformRotateWindow.axaml
@@ -10,7 +10,7 @@
 		ShowInTaskbar="False"
 		SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
-        Icon="avares://Pixed/Resources/icon.ico">
+        Icon="avares://Pixed.Core/Resources/icon.ico">
 	<StackPanel>
 		<CheckBox Content="Counter-clockwise rotation" Name="counterClockwiseRotation" Margin="10"/>
 		<CheckBox Content="Apply to all frames" Name="applyToAllFrames" Margin="10"/>
