About window changed

--- a/Pixed/Windows/AboutWindow.axaml
+++ b/Pixed/Windows/AboutWindow.axaml
@@ -4,12 +4,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Pixed.Windows.AboutWindow"
+		xmlns:vm="clr-namespace:Pixed.ViewModels;assembly=Pixed.Core"
         Title="About"
         ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner" CanResize="False">
-  <StackPanel HorizontalAlignment="Center" Spacing="20" Margin="40">
-    <Image Source="/Resources/icon.png" Width="64" Height="64"/>
-    <TextBlock Text="Pixed" FontWeight="Bold" FontSize="30"/>
-    <TextBlock Text="Version text" Name="versionText"/>
-  </StackPanel>
+	<Window.DataContext>
+		<vm:AboutViewModel/>
+	</Window.DataContext>
+	<StackPanel HorizontalAlignment="Center" Spacing="20" Margin="40">
+		<Image Source="/Resources/icon.png" Width="64" Height="64"/>
+		<TextBlock Text="Pixed" FontWeight="Bold" FontSize="30" HorizontalAlignment="Center"/>
+		<TextBlock Text="{Binding AppVersion}" Name="versionText"/>
+		<TextBlock Text="Author: Mateusz Nejman"/>
+		<StackPanel Orientation="Horizontal" Spacing="10">
+			<Button Name="buttonWWW" Command="{Binding OpenUrlCommand}" CommandParameter="https://mateusz-nejman.com">
+				<Image Source="avares://Pixed.Core/Resources/Icons/sphere.png"/>
+			</Button>
+			<Button Name="buttonGithub" Command="{Binding OpenUrlCommand}" CommandParameter="https://github.com/Mateusz-Nejman/Pixed">
+				<Image Source="avares://Pixed.Core/Resources/Icons/github.png"/>
+			</Button>
+		</StackPanel>
+	</StackPanel>
 </Window>
