--- a/Pixed/Controls/PaintCanvas.axaml
+++ b/Pixed/Controls/PaintCanvas.axaml
@@ -1,32 +1,33 @@
 ﻿<UserControl x:Class="Pixed.Controls.PaintCanvas"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Pixed.Controls"
 			 xmlns:controls="clr-namespace:Pixed.Controls"
              xmlns:viewmodels="clr-namespace:Pixed.ViewModels"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*"/>
-			<RowDefinition Height="32"/>
-		</Grid.RowDefinitions>
-		<ScrollViewer
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="32"/>
+    </Grid.RowDefinitions>
+    <ScrollViewer
     x:Name="scrollView"
     VerticalScrollBarVisibility="Visible"
 	HorizontalScrollBarVisibility="Visible"
 	AllowAutoHide="False"
-	Theme="{StaticResource NoGesturesScrollViewer}">
-			<Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
-				<Grid.Background>
-					<ImageBrush Source="avares://Pixed.Core/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
-				</Grid.Background>
-				<Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
-				<Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
-				<Canvas Background="{Binding GridBrush}"/>
-				<Border Name="interactionBorder" Background="Transparent"
+	Theme="{StaticResource NoGesturesScrollViewer}"
+    Offset="{Binding ScrollViewerOffset, Mode=TwoWay}">
+      <Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
+        <Grid.Background>
+          <ImageBrush Source="avares://Pixed.Core/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
+        </Grid.Background>
+        <Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
+        <Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
+        <Canvas Background="{Binding GridBrush}"/>
+        <Border Name="interactionBorder" Background="Transparent"
 						PointerExited="Border_PointerExited"
 						PointerMoved="Border_PointerMoved"
 						PointerPressed="Border_PointerPressed"
@@ -34,22 +35,22 @@
 						PointerWheelChanged="Border_PointerWheelChanged"
 						KeyUp="Border_KeyProcess"
 						KeyDown="Border_KeyProcess"/>
-			</Grid>
-		</ScrollViewer>
-		<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5">
-			<Button Width="32" Height="32" Command="{Binding ZoomOutCommand}">
-				<Image Source="/Resources/Icons/zoom-out.png"/>
-			</Button>
-			<Button Width="32" Height="32" Command="{Binding ZoomInCommand}">
-				<Image Source="/Resources/Icons/zoom-in.png"/>
-			</Button>
+      </Grid>
+    </ScrollViewer>
+    <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5">
+      <Button Width="32" Height="32" Command="{Binding ZoomOutCommand}">
+        <Image Source="/Resources/Icons/zoom-out.png"/>
+      </Button>
+      <Button Width="32" Height="32" Command="{Binding ZoomInCommand}">
+        <Image Source="/Resources/Icons/zoom-in.png"/>
+      </Button>
       <TextBlock Text="Tool size" VerticalAlignment="Center"/>
       <NumericUpDown Minimum="1" Value="{Binding ToolSize, Mode=TwoWay}" Width="200"/>
-			<CheckBox Content="Shift" IsChecked="{Binding ShiftChecked, Mode=TwoWay}" IsEnabled="{Binding ShiftEnabled}"/>
-			<CheckBox Content="Control" IsChecked="{Binding ControlChecked, Mode=TwoWay}" IsEnabled="{Binding ControlEnabled}"/>
-			<CheckBox Content="Alt" IsChecked="{Binding AltChecked, Mode=TwoWay}" IsEnabled="{Binding AltEnabled}"/>
+      <CheckBox Content="Shift" IsChecked="{Binding ShiftChecked, Mode=TwoWay}" IsEnabled="{Binding ShiftEnabled}"/>
+      <CheckBox Content="Control" IsChecked="{Binding ControlChecked, Mode=TwoWay}" IsEnabled="{Binding ControlEnabled}"/>
+      <CheckBox Content="Alt" IsChecked="{Binding AltChecked, Mode=TwoWay}" IsEnabled="{Binding AltEnabled}"/>
       <TextBlock Text="{Binding ProjectSizeText}" VerticalAlignment="Center" Margin="10,0,0,0"/>
       <TextBlock Text="{Binding MouseCoordinatesText}" VerticalAlignment="Center"/>
-		</StackPanel>
-	</Grid>
+    </StackPanel>
+  </Grid>
 </UserControl>
