--- a/Pixed/Windows/MainWindow.axaml
+++ b/Pixed/Windows/MainWindow.axaml
@@ -21,7 +21,8 @@
         ExtendClientAreaChromeHints="NoChrome"
         ExtendClientAreaTitleBarHeightHint="-1"
         Icon="avares://Pixed.Core/Resources/icon.ico"
-		NativeMenu.Menu="{Binding Menu}">
+		NativeMenu.Menu="{Binding Menu}"
+		x:DataType="viewmodels:MainViewModel">
   <Window.KeyBindings>
     <KeyBinding Gesture="CTRL+Q"
 					Command="{Binding QuitCommand}"/>
