--- a/Pixed/Windows/PaletteWindow.axaml
+++ b/Pixed/Windows/PaletteWindow.axaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Pixed" xmlns:viewmodels="clr-namespace:Pixed.ViewModels" xmlns:controls="clr-namespace:Pixed.Controls"
         mc:Ignorable="d"
         Title="PaletteWindow" Height="600" Width="800" Background="{StaticResource BaseBackground}" WindowStartupLocation="CenterOwner"
-        Icon="avares://Pixed.Core/Resources/icon.ico">
+        Icon="avares://Pixed.Core/Resources/icon.ico"
+		x:DataType="viewmodels:PaletteWindowViewModel">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
