--- a/Pixed/Controls/FrameListControl.axaml
+++ b/Pixed/Controls/FrameListControl.axaml
@@ -4,8 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Pixed.Controls"
+			 xmlns:models="clr-namespace:Pixed.Models"
              mc:Ignorable="d" 
-             Width="100" Height="102">
+             Width="100" Height="102"
+			 x:DataType="models:Frame">
   <Grid Width="96" Height="96">
     <Grid.Background>
       <ImageBrush Source="avares://Pixed.Core/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
