--- a/Pixed/Controls/LayerListControl.axaml
+++ b/Pixed/Controls/LayerListControl.axaml
@@ -4,8 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Pixed.Controls"
+			 xmlns:models="clr-namespace:Pixed.Models"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+			 x:DataType="models:Layer">
     <StackPanel Orientation="Horizontal">
         <Border BorderBrush="Gray" BorderThickness="1">
             <Image Width="32" Height="32" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
