--- a/Pixed/Controls/MainWindowSections/LayersSection.axaml
+++ b/Pixed/Controls/MainWindowSections/LayersSection.axaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:Pixed.Controls.MainWindowSections"
              xmlns:vm="clr-namespace:Pixed.ViewModels"
              xmlns:controls="clr-namespace:Pixed.Controls"
-             x:Class="Pixed.Controls.MainWindowSections.LayersSection">
+             x:Class="Pixed.Controls.MainWindowSections.LayersSection"
+			 x:DataType="vm:LayersSectionViewModel">
 	<local:Section>
 		<StackPanel>
 			<TextBlock Text="Layers" Height="32" Foreground="White" FontSize="15" Padding="4" FontWeight="Bold"/>
