--- a/Pixed/Controls/MainWindowSections/PaletteSection.axaml
+++ b/Pixed/Controls/MainWindowSections/PaletteSection.axaml
@@ -7,7 +7,8 @@
              xmlns:vm="clr-namespace:Pixed.ViewModels"
              xmlns:controls="clr-namespace:Pixed.Controls"
              xmlns:colorpicker="clr-namespace:ColorPicker;assembly=ColorPicker.AvaloniaUI"
-             x:Class="Pixed.Controls.MainWindowSections.PaletteSection">
+             x:Class="Pixed.Controls.MainWindowSections.PaletteSection"
+			 x:DataType="vm:PaletteSectionViewModel">
 	<local:Section>
 		<StackPanel>
 			<colorpicker:StandardColorPicker Width="186" Height="400" SelectedColor="{Binding PrimaryColor, Mode=TwoWay}" SecondaryColor="{Binding SecondaryColor, Mode=TwoWay}"/>
