--- a/Pixed/Controls/MainWindowSections/ProjectsSection.axaml
+++ b/Pixed/Controls/MainWindowSections/ProjectsSection.axaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Pixed.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Pixed.Controls.MainWindowSections.ProjectsSection">
+             x:Class="Pixed.Controls.MainWindowSections.ProjectsSection"
+			 x:DataType="vm:ProjectsSectionViewModel">
   <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden">
     <TabControl ItemsSource="{Binding Projects}" SelectedIndex="{Binding SelectedProject, Mode=TwoWay}">
       <TabControl.ItemTemplate>
