--- a/Pixed/Controls/PaintCanvas.axaml
+++ b/Pixed/Controls/PaintCanvas.axaml
@@ -7,7 +7,8 @@
 			 xmlns:controls="clr-namespace:Pixed.Controls"
              xmlns:viewmodels="clr-namespace:Pixed.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+			 x:DataType="viewmodels:PaintCanvasViewModel">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*"/>
